# pos_desk_v2

./: .gitignore  index.html  package-lock.json  package.json  vite.config.mjs
.github/workflows/: build.yml
admin-desktop/: index.html  package-lock.json  package.json  tailwind.config.mjs  vite.config.mjs
admin-desktop/src/: app.jsx  main.jsx
admin-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
admin-desktop/src-tauri/src/: lib.rs
admin-desktop/src/components/: LangSwitcher.jsx  Layout.jsx  ShortcutsOverlay.jsx
admin-desktop/src/lib/: api.js  auth.js  config.js  i18n.jsx
admin-desktop/src/pages/: Activation.jsx  Admins.jsx  ApiMetrics.jsx  Chat.jsx  Dashboard.jsx  FolderRequests.jsx  Login.jsx  Plans.jsx  ServerSetup.jsx  Setup.jsx  Storage.jsx  Tenants.jsx
saas_pos/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DOCUMENTATION.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
saas_pos/cmd/server/: main.go
saas_pos/deploy/: VPS_SETUP.md  deploy-k8s.sh  deploy.sh  hooks.json  webhook.service
saas_pos/docs/: SCALABILITY.md  SPA_ROUTING_FIX.md
saas_pos/internal/activation/: handler.go  model.go  service.go
saas_pos/internal/adjustment/: handler.go  model.go  service.go  service_test.go
saas_pos/internal/batch/: handler.go  model.go  service.go  service_test.go
saas_pos/internal/brand/: handler.go  model.go  service.go  service_test.go
saas_pos/internal/caisse/: handler.go  model.go  reconciliation_test.go  service.go  service_test.go
saas_pos/internal/captcha/: captcha.go
saas_pos/internal/category/: handler.go  model.go  service.go  service_test.go
saas_pos/internal/chat/: handler.go  model.go  service.go
saas_pos/internal/client/: handler.go  model.go  payment_fifo_test.go  service.go  service_test.go
saas_pos/internal/config/: config.go
saas_pos/internal/counter/: counter.go
saas_pos/internal/database/: indexes.go  mongo.go
saas_pos/internal/discount/: handler.go  model.go  service.go  service_test.go
saas_pos/internal/docimport/: handler.go  model.go  ocr.go  parser.go  parser_test.go  service.go
saas_pos/internal/dvr/: handler.go  model.go  service.go
saas_pos/internal/expense/: handler.go  model.go  service.go  service_test.go
saas_pos/internal/facturation/: handler.go  model.go  service.go  service_test.go
saas_pos/k8s/: app-deployment.yaml  app-service.yaml  caddy-configmap.yaml  caddy-deployment.yaml  caddy-service.yaml  cert-issuer.yaml  configmap.yaml  ingress.yaml  mongo-service.yaml  mongo-statefulset.yaml  namespace.yaml  network-policies.yaml  pvc-mongo.yaml  pvc-uploads.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml.template  service-accounts.yaml  webhook-service.yaml
src/: app.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsi
src-tauri/src/: lib.rs
src/admin/: AdminPanel.jsx  api.js  auth.js
src/components/: Layout.jsx  Modal.jsx  Pagination.jsx  PrintLabelModal.jsx  QuickAddProductModal.jsx  RemoteScanner.jsx  ShortcutsOverlay.jsx  Skeleton.jsx  TermsModal.jsx  Toast.jsx
src/lib/: api.js  auth.js  blPrint.js  config.js  escpos.js  hotkeys.js  i18n.jsx  imageCompress.js  invoicePrint.js  receiptPrint.js  scale.js  tspl.js  turnstile.js  webusbPrint.js
src/pages/: ArchivedProducts.jsx  Brands.jsx  Categories.jsx  Chat.jsx  Clients.jsx  DVREvents.jsx  Dashboard.jsx  Declarations.jsx  Expenses.jsx  ExpiringBatches.jsx  Facturation.jsx  Favorites.jsx  Folders.jsx  ImportPurchase.jsx  Login.jsx  Losses.jsx  LowStock.jsx  ModeSelect.jsx  Pos.jsx  Products.jsx  Purchases.jsx  Retraits.jsx  SaleReturns.jsx  Sales.jsx  SalesStats.jsx  Settings.jsx  Setup.jsx  Signup.jsx  Suppliers.jsx  TermsConditions.jsx  Transfers.jsx  Units.jsx  UserSummary.jsx  Users.jsx
(+197 files in other folders)
