[package]
name = "pos-desktop"
version = "1.0.1"
description = "CiPOSdz Desktop Client"
authors = ["CiPOSdz"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
obfstr = "0.4"
ed25519-dalek = "2"
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.dev]
incremental = true
opt-level = 0
# 16 is the sweet spot — enough parallelism without overwhelming the linker
codegen-units = 16

[profile.dev.package."*"]
opt-level = 2
codegen-units = 16

[profile.release]
strip = true
lto = "thin"
panic = "abort"
opt-level = "s"
codegen-units = 1
