[package]
name = "admin-desktop"
version = "1.0.0"
description = "Kerty Admin Desktop Client"
authors = ["Kerty"]
license = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
obfstr = "0.4"
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
